<resources>
    <string name="app_name">Hostel Villa</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="_19mcal000">19MCAL000</string>
    <string name="dashboard">Dashboard:</string>
    <string name="pass_management">Pass Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_for_leave_pass">Apply for Leave / Pass</string>
    <string name="select_pass">Select Pass:</string>
    <string name="home_pass">Home Pass</string>
    <string name="select_date">Select Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="rector">Rector:</string>
    <string name="faculty">Faculty:</string>
    <string name="end_date">End Date:</string>
    <string name="pass_type">Pass Type:</string>
    <string name="late_pass">Late Pass</string>
    <string name="clear">Clear</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="going_time">Going Time:</string>
    <string name="_00_00_am_pm">00:00 AM/PM</string>
    <string name="purpose">Purpose</string>
    <string name="destination">Destination</string>
    <string name="return_date">Return Date:</string>
    <string name="going_date">Going Date:</string>
    <string name="apply_home_pass">Apply Home Pass</string>
    <string name="apply_late_pass">Apply Late Pass</string>
    <string name="complain_management">Complain Management</string>
    <string name="your_pass_is_canceled">Your Pass is Canceled</string>
    <string name="view_pass">View Pass</string>
    <string name="cancel_pass">Cancel Pass</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="leave_type">Leave Type:</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="canceled">Canceled</string>
    <string name="hostel_no">Hostel No</string>
    <string name="hostel_room_no">Hostel Room No.</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="unseen">unseen</string>
    <string name="seen">seen</string>
    <string name="register_student">Register Student</string>
    <string name="register">Register</string>
    <string name="student_name">Student Name</string>
    <string name="student_contact_number">Student Contact Number</string>
    <string name="parent_name">Parent Name</string>
    <string name="parent_mobile_number">Parent Mobile Number</string>
    <string name="hostel_number">Hostel Number</string>
    <string name="address">Address</string>
    <string name="register_complain">Register Complain</string>
    <string name="complaint">Complaint</string>
    <string name="accept_pass">Accept Pass</string>
    <string name="mark_as_seen">Mark as Seen</string>
    <string name="loading">Loading...</string>
    <string name="label_not_applied_for_any_pass_yet">Not Applied for any pass yet!</string>
    <string name="label_no_complaint_is_register_yet">No Complaint is Register Yet!</string>
    <string name="label_cancel">Pass is Canceled</string>
    <string name="label_student_info">Student Info</string>
    <string name="password">Password</string>
    <string name="label_admin">Admin</string>
    <string name="button_add_faculty">Add Faculty</string>
    <string name="button_add_rector">Add Rector</string>
    <string name="hint_faculty_name">Faculty Name</string>
    <string name="hint_faculty_number">Faculty Number</string>
    <string name="button_register_faculty">Register Faculty</string>
    <string name="hint_rector_name">Rector Name</string>
    <string name="button_register_rector">Register Rector</string>
    <string name="hint_rector_phone_number">Rector Phone Number</string>
    <string name="hint_rector_hostel_no">Rector Hostel No</string>
</resources>