<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewFinger"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/ic_fingerprint"
        app:layout_constraintBottom_toTopOf="@id/textViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewFinger"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_username"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toTopOf="@id/editTextUserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textViewLogin"
        app:layout_constraintTop_toBottomOf="@id/textViewLogin"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextUserPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_password"
        android:inputType="numberPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@id/editTextUserName"
        app:layout_constraintStart_toStartOf="@id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@id/editTextUserName"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_design"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/editTextUserPassword"
        app:layout_constraintStart_toStartOf="@id/editTextUserPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextUserPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>