<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_10sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_10sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewRegisterStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register_rector"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toTopOf="@id/guideLineTop" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRectorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_destination_design"
            android:hint="@string/hint_rector_name"
            android:textColorHint="@color/mainColor"
            app:hintTextColor="@color/mainColor"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegisterStudent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_destination_design"
                android:inputType="textPersonName|textCapWords"
                android:lines="1"
                android:textColor="@color/mainColor"
                android:textColorHint="@color/mainColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRectorNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_destination_design"
            android:hint="@string/hint_rector_phone_number"
            android:textColorHint="@color/mainColor"
            app:hintTextColor="@color/mainColor"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutRectorName"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutRectorName"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRectorName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_destination_design"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/mainColor"
                android:textColorHint="@color/mainColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRectorHostelNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_destination_design"
            android:hint="@string/hint_rector_hostel_no"
            android:textColorHint="@color/mainColor"
            app:hintTextColor="@color/mainColor"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutRectorNumber"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutRectorNumber"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRectorNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_destination_design"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/mainColor"
                android:textColorHint="@color/mainColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterRector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:backgroundTint="@color/white"
            android:text="@string/button_register_rector"
            android:textAllCaps="false"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutRectorHostelNo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>